Update license, remove unused imports and jvm args